# miniRay

./: .gitignore  CMakeLists.txt  camera.cpp  camera.hpp  color.cpp  color.hpp  image.cpp  image.hpp  main.cpp  plane.cpp  plane.hpp  ray.hpp  readme.md  scene.cpp  scene.hpp  shading.cpp  shading.hpp  sphere.cpp  sphere.hpp  surface.cpp  surface.hpp  vector.hpp
cmake/: config.h.in
include/: base_matrix.hpp  camera.hpp  color.hpp  config.hpp  image.hpp  matrix.hpp  meta.hpp  plane.hpp  random.hpp  raster.hpp  scene.hpp  shading.hpp  sphere.hpp  surface.hpp  triangle.hpp  type.hpp  vector.hpp
include/raster/: algorithm.hpp  pointlist.hpp
src/: CMakeLists.txt  camera.cpp  color.cpp  image.cpp  plane.cpp  random.cpp  raster.cpp  scene.cpp  shading.cpp  sphere.cpp  surface.cpp  triangle.cpp  vector.cpp
src/raster/: algorithm.cpp  pointlist.cpp
test/: CMakeLists.txt  image_test.cpp  main.cpp  trace_test.cpp  vector_test.cpp
test/unit/: matrix_test.cpp
